--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ PORT=3030
 NAME='interface_backend'
 
 DB_HOST='192.168.100.14'
-DB_USER='dba'
-DB_PASSWORD='Dbweb2@25;'
+DB_USER='fox'
+DB_PASSWORD='fox2004'
 DB_NAME='Autoshop'
 DB_PORT=1433
 
