--- a/.env
+++ b/.env
@@ -9,4 +9,6 @@ DB_NAME='Autoshop'
 DB_PORT=1433
 FPI_URL='https://www.fortuneparts.net'
 
+JWT_SECRET=รหัสลับสุดยอดห้ามบอกใคร1234
+
 API_PREFIX=/api
