--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.3",
     "knex": "^3.1.0",
     "mssql": "^12.0.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/mssql": "^9.1.8",
     "@types/node": "^24.7.0",
     "nodemon": "^3.1.10",
